<resources>
    <string name="app_name">NewProject_Firebase_new</string>
    <string name="msg1">Enter Your ID</string>
    <string name="msg2">Enter Your Name</string>
    <string name="msg3">Enter Your Address</string>
    <string name="msg4">Enter Your Contact Number</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
